--- a/app/src/main/res/layout/fragment_land_chat.xml
+++ b/app/src/main/res/layout/fragment_land_chat.xml
@@ -14,9 +14,12 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:background="@android:color/transparent"
+        android:listSelector="@android:color/transparent"
         android:divider="@android:color/transparent"
         android:dividerHeight="10.0sp"
         android:elevation="0dp" />
+
 
     <Space
         android:layout_width="0dp"
