--- a/app/src/main/res/layout-land/chat_item_1.xml
+++ b/app/src/main/res/layout-land/chat_item_1.xml
@@ -2,6 +2,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/chat_item_bg"
+    android:gravity="center_vertical"
     android:padding="5dp">
 
     <ImageView
